<?xml version="1.0"?>
<package>
    <name>victoria_gazebo</name>
    <version>0.1.0</version>
    <description>Victoria gazebo package</description>

    <author email="jrcapriles@gmail.com">Jose Capriles</author>
    <maintainer email="jrcapriles@gmail.com">Jose Capriles</maintainer>

    <license>BSD</license>

    <url type="bugtracker">https://github.com/victoriarobotics/victoria_simulator/issues</url>
    <url type="repository">https://github.com/victoriarobotics/victoria_simulator</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <run_depend>controller_manager</run_depend>
    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>victoria_description</run_depend>
    <run_depend>victoria_control</run_depend>
    <run_depend>pointcloud_to_laserscan</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rostopic</run_depend>

    <export>
    </export>
</package>
